syntax = "proto3";

package index;

service FS{
    rpc Stat(FileRequest) returns (FileInfo);
    rpc Open(stream FileRequest) returns (stream FileResponse);

}

// Requests
message FileRequest{
    oneof Request {
        string name = 1;
        OpenRequest open = 2;
        StatRequest stat = 3;
        TruncateRequest truncate = 4;
        ReadRequest read = 5;
        ReadAtRequest readAt = 6;
        ReaddirRequest readdir = 7;
        ReaddirnamesRequest readdirnames = 8;
        SeekRequest seek = 9;
        WriteRequest write = 10;
        WriteAtRequest writeAt = 11;
    }
}

message OpenRequest {
    string name = 1;
}

message StatRequest {}

message TruncateRequest {
    int64 size = 1;
}

message ReadRequest {}

message ReadAtRequest {
    int64 offset = 1;
}

message ReaddirRequest {
    int32 count = 1;
}

message ReaddirnamesRequest {
    int32 count = 1;
}

message SeekRequest {
    int64 offset = 1;
    enum Whence {
        TOP = 0;
        CURRENT = 1;
        BOTTOM = 2;
    }
    Whence whence = 2;
}

message WriteRequest {}

message WriteAtRequest {}

// Responses
message FileInfo{
    string name = 1;
    int64 size = 2;
    uint32 mode = 3;
    int64 modTime = 4;
    bool isDir = 5;
}

message FileResponse{
    oneof Response {
        FileInfo fileInfo = 1;
        ReadResponse read = 2;
        ReaddirResponse readdir = 3;
        ReaddirnamesResponse readdirnames = 4;
        SeekResponse seek = 5;
        WriteResponse write = 6;
    }
}

message ReadResponse {
    bytes content = 1;
}

message ReaddirResponse {
    repeated FileInfo fileInfo = 1;
}

message ReaddirnamesResponse {
    repeated string names = 1;
}

message SeekResponse {
    int64 offset = 1;
}

message WriteResponse {
    int32 bytesWritten = 1;
}